oss-knowledge-gitops/backend/intent-classifier/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: oss-knowledge
    labels:
        name: oss-knowledge
